--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ const steps = [
 { q:"Probleme mit unkontrollierbarem Harndrang?",
   a:[
     {t:"Ja", next:"freq"},
-    {t:"Nein", next:1}
+    {t:"Nein"}
 ]},
 
 /* 1.1 */
@@ -104,7 +104,7 @@ const steps = [
 { q:"Häufig Blasenentzündungen?",
   a:[
     {t:"Ja", next:"entz"},
-    {t:"Nein", next:1}
+    {t:"Nein"}
 ]},
 
 { id:"entz",
@@ -169,7 +169,7 @@ const steps = [
 { q:"Becken-/Rückenschmerzen?",
   a:[
     {t:"Ja", next:"pain"},
-    {t:"Nein", next:1}
+    {t:"Nein"}
 ]},
 
 { id:"pain",
