--- a/index.html
+++ b/index.html
@@ -1,262 +1,440 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>BROWNS – Beckenboden Check</title>
-
-<style>
-body{
-font-family:-apple-system,BlinkMacSystemFont,Segoe UI;
-background:#fff6fa;
-padding:20px;
-}
-
-.card{
-max-width:720px;
-margin:auto;
-background:white;
-padding:25px;
-border-radius:22px;
-box-shadow:0 10px 30px rgba(0,0,0,.1);
-}
-
-h2{color:#c04a8a}
-
-button{
-width:100%;
-padding:16px;
-margin:8px 0;
-border-radius:14px;
-border:none;
-background:#f6e8f0;
-font-size:16px;
-}
-
-button.primary{
-background:#c04a8a;
-color:white;
-font-weight:bold;
-}
-
-.score{
-font-size:48px;
-text-align:center;
-color:#c04a8a;
-font-weight:bold;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BROWNS – Beckenboden Check (Frauen)</title>
+  <style>
+    :root{
+      --bg:#fff6fa;
+      --card:#ffffff;
+      --ink:#2f2a2c;
+      --muted:#6b6467;
+      --line:#f0d7e3;
+      --primary:#c04a8a;
+      --primary2:#e88ab6;
+      --btn:#faeef4;
+    }
+    body{
+      margin:0; padding:18px;
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
+      background: radial-gradient(1200px 600px at 20% 0%, #ffe6f0 0%, var(--bg) 50%, #fff 100%);
+      color:var(--ink);
+    }
+    .card{
+      max-width:820px; margin:0 auto;
+      background:var(--card);
+      border-radius:24px;
+      padding:20px;
+      box-shadow:0 14px 40px rgba(0,0,0,.10);
+      border:1px solid rgba(240,215,227,.6);
+    }
+    .top{
+      display:flex; align-items:center; justify-content:space-between; gap:10px; flex-wrap:wrap;
+      margin-bottom:10px;
+    }
+    .brand{
+      display:flex; flex-direction:column; gap:2px;
+    }
+    .brand b{ font-size:16px; letter-spacing:.2px; color:var(--primary); }
+    .brand span{ font-size:12px; color:var(--muted); }
+    .pill{
+      background:#fff0f7;
+      border:1px solid var(--line);
+      border-radius:999px;
+      padding:8px 12px;
+      font-size:13px;
+    }
+    h2{ margin:12px 0 6px; font-size:20px; }
+    p.sub{ margin:0 0 8px; color:var(--muted); font-size:13px; }
+    .opts{ display:grid; gap:10px; margin-top:14px; }
+    button{
+      width:100%;
+      padding:16px;
+      border-radius:16px;
+      border:1px solid var(--line);
+      background:var(--btn);
+      font-size:16px;
+      text-align:left;
+    }
+    button:active{ transform:scale(.99); }
+    .row{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+    .primary{
+      background:linear-gradient(135deg,var(--primary),var(--primary2));
+      color:#fff;
+      border:0;
+      font-weight:800;
+      text-align:center;
+    }
+    .ghost{
+      background:#f5f5f7;
+      border:1px solid #e6e6ea;
+      text-align:center;
+    }
+    .score{
+      font-size:54px; font-weight:900; color:var(--primary);
+      text-align:center; margin:10px 0 0;
+    }
+    .box{
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:14px;
+      background:#fff;
+    }
+  </style>
 </head>
-
 <body>
-<div class="card" id="app"></div>
+  <div class="card" id="app"></div>
 
 <script>
+  // Helper: clamp score to max 100 (falls später mal erweitert)
+  const clamp100 = (n) => Math.max(0, Math.min(100, n));
 
-let score = 0;
-let step = 0;
+  // Fragen (mit IDs) + exakte Sprunglogik wie im Originalbogen
+  const Q = [
+    {
+      id:"q1",
+      title:"1. Haben Sie Probleme mit unkontrollierbarem Harndrang?",
+      type:"choice",
+      options:[
+        { label:"Ja", score:0, next:"q1_1" },
+        { label:"Nein", score:0, next:"q2" }
+      ]
+    },
+    {
+      id:"q1_1",
+      title:"1.1 Wie oft pro Woche?",
+      type:"choice",
+      options:[
+        { label:"Nur 1–2 Mal pro Monat (+1)", score:1, next:"q1_2" },
+        { label:"1–2 Mal die Woche (+2)", score:2, next:"q1_2" },
+        { label:"3–5 Mal die Woche (+3)", score:3, next:"q1_2" },
+        { label:"Täglich (+4)", score:4, next:"q1_2" }
+      ]
+    },
+    {
+      id:"q1_2",
+      title:"1.2 Bei welchen Aktivitäten?",
+      sub:"Bitte das passendste auswählen.",
+      type:"choice",
+      options:[
+        { label:"Husten, Niesen, Lachen (+2)", score:2, next:"q1_3" },
+        { label:"Treppen steigen, Schweres Heben (+2)", score:2, next:"q1_3" },
+        { label:"Beim Sport, Laufen, Springen (+2)", score:2, next:"q1_3" },
+        { label:"Manchmal einfach so, ganz plötzlich (+2)", score:2, next:"q1_3" }
+      ]
+    },
+    {
+      id:"q1_3",
+      title:"1.3 Wie hoch ist der Urinverlust?",
+      type:"choice",
+      options:[
+        { label:"Kein Urinverlust (+0)", score:0, next:"q2" },
+        { label:"Geringe Menge – ein paar Tröpfchen (+1)", score:1, next:"q2" },
+        { label:"Mittelgroße Menge – etwas mehr als ein paar Tröpfchen (+2)", score:2, next:"q2" },
+        { label:"Große Menge – ich kann es gar nicht mehr halten (+4)", score:4, next:"q2" }
+      ]
+    },
 
-const steps = [
+    {
+      id:"q2",
+      title:"2. Wie oft pro Tag gehen Sie auf die Toilette?",
+      type:"choice",
+      options:[
+        { label:"4–6 Mal (+0)", score:0, next:"q3" },
+        { label:"7–10 Mal (+2)", score:2, next:"q3" },
+        { label:"Öfter als 10 Mal (+4)", score:4, next:"q3" }
+      ]
+    },
+    {
+      id:"q3",
+      title:"3. Wie oft pro Nacht gehen Sie auf die Toilette?",
+      type:"choice",
+      options:[
+        { label:"Nie (+0)", score:0, next:"q4" },
+        { label:"1 Mal (+2)", score:2, next:"q4" },
+        { label:"Öfter als 1 Mal (+4)", score:4, next:"q4" }
+      ]
+    },
 
-/* 1 */
-{ q:"Probleme mit unkontrollierbarem Harndrang?",
-  a:[
-    {t:"Ja", next:"freq"},
-    {t:"Nein"}
-]},
+    {
+      id:"q4",
+      title:"4. Haben Sie häufig Blasenentzündungen?",
+      type:"choice",
+      options:[
+        { label:"Ja", score:0, next:"q4_1" },
+        { label:"Nein", score:0, next:"q5" }
+      ]
+    },
+    {
+      id:"q4_1",
+      title:"4.1 Wie oft haben Sie eine Blasenentzündung?",
+      type:"choice",
+      options:[
+        { label:"Nur 1–2 Mal im Jahr (+1)", score:1, next:"q5" },
+        { label:"Alle 3–4 Monate (+2)", score:2, next:"q5" },
+        { label:"Alle 1–2 Monate (+3)", score:3, next:"q5" },
+        { label:"Chronische Blasenentzündung (+5)", score:5, next:"q5" }
+      ]
+    },
 
-/* 1.1 */
-{ id:"freq",
-  q:"Wie oft pro Woche?",
-  a:[
-    {t:"1–2× pro Monat (+1)", s:1},
-    {t:"1–2× pro Woche (+2)", s:2},
-    {t:"3–5× pro Woche (+3)", s:3},
-    {t:"Täglich (+4)", s:4}
-]},
+    {
+      id:"q5",
+      title:"5. Tragen Sie Binden oder Einlagen im Alltag?",
+      type:"choice",
+      options:[
+        { label:"Ja (+4)", score:4, next:"q6" },
+        { label:"Nein (+0)", score:0, next:"q6" }
+      ]
+    },
+    {
+      id:"q6",
+      title:"6. Haben Sie nach dem Wasserlassen das Gefühl, dass noch Urin in der Blase verbleibt?",
+      type:"choice",
+      options:[
+        { label:"Ja (+3)", score:3, next:"q7" },
+        { label:"Nein (+0)", score:0, next:"q7" }
+      ]
+    },
 
-/* 1.3 */
-{ q:"Wie hoch ist der Urinverlust?",
-  a:[
-    {t:"Kein (+0)", s:0},
-    {t:"Gering (+1)", s:1},
-    {t:"Mittel (+2)", s:2},
-    {t:"Groß (+4)", s:4}
-]},
+    {
+      id:"q7",
+      title:"7. Haben Sie eines oder mehrere Kinder geboren?",
+      type:"choice",
+      options:[
+        { label:"Ja", score:0, next:"q7_1" },
+        { label:"Nein", score:0, next:"q8" }
+      ]
+    },
+    {
+      id:"q7_1",
+      title:"7.1 Wie viele?",
+      type:"choice",
+      options:[
+        { label:"1 Kind (+1)", score:1, next:"q7_2" },
+        { label:"2 Kinder (+2)", score:2, next:"q7_2" },
+        { label:"3 Kinder (+3)", score:3, next:"q7_2" },
+        { label:"Mehr als 3 Kinder (+5)", score:5, next:"q7_2" }
+      ]
+    },
+    {
+      id:"q7_2",
+      title:"7.2 War(en) die Geburt(en) vaginal oder per Kaiserschnitt?",
+      type:"choice",
+      options:[
+        { label:"Vaginal (+5)", score:5, next:"q7_3" },
+        { label:"Kaiserschnitt (+3)", score:3, next:"q7_3" }
+      ]
+    },
+    {
+      id:"q7_3",
+      title:"7.3 Wie lange ist die letzte Geburt her?",
+      sub:"Hinweis bei „unter 1 Jahr“: ggf. ärztlich abklären.",
+      type:"choice",
+      options:[
+        { label:"Über 5 Jahre (+1)", score:1, next:"q7_4" },
+        { label:"3–5 Jahre (+2)", score:2, next:"q7_4" },
+        { label:"1–3 Jahre (+3)", score:3, next:"q7_4" },
+        { label:"Unter 1 Jahr (+4)", score:4, next:"q7_4" }
+      ]
+    },
+    {
+      id:"q7_4",
+      title:"7.4 Ist Ihr Sexualempfinden seit der/n Geburt(en) wie zuvor?",
+      type:"choice",
+      options:[
+        { label:"Ja (+0)", score:0, next:"q8" },
+        { label:"Nein (+4)", score:4, next:"q8" }
+      ]
+    },
 
-/* 2 */
-{ q:"Wie oft pro Tag Toilette?",
-  a:[
-    {t:"4–6 (+0)", s:0},
-    {t:"7–10 (+2)", s:2},
-    {t:">10 (+4)", s:4}
-]},
+    {
+      id:"q8",
+      title:"8. Gab es Veränderungen in Ihrer Libido oder Ihrem sexuellen Verlangen in letzter Zeit?",
+      type:"choice",
+      options:[
+        { label:"Ja (+4)", score:4, next:"q9" },
+        { label:"Nein (+0)", score:0, next:"q9" }
+      ]
+    },
+    {
+      id:"q9",
+      title:"9. Haben Sie Schmerzen beim Sex?",
+      type:"choice",
+      options:[
+        { label:"Ja (+4)", score:4, next:"q10" },
+        { label:"Nein (+0)", score:0, next:"q10" }
+      ]
+    },
+    {
+      id:"q10",
+      title:"10. Haben Sie Probleme, einen Orgasmus zu bekommen?",
+      type:"choice",
+      options:[
+        { label:"Ja (+4)", score:4, next:"q11" },
+        { label:"Nein (+0)", score:0, next:"q11" }
+      ]
+    },
+    {
+      id:"q11",
+      title:"11. Sind Sie mit Ihrer Sensibilität unzufrieden?",
+      type:"choice",
+      options:[
+        { label:"Ja (+4)", score:4, next:"q12" },
+        { label:"Nein (+0)", score:0, next:"q12" }
+      ]
+    },
 
-/* 3 */
-{ q:"Wie oft nachts?",
-  a:[
-    {t:"Nie (+0)", s:0},
-    {t:"1× (+2)", s:2},
-    {t:">1× (+4)", s:4}
-]},
+    {
+      id:"q12",
+      title:"12. Leiden Sie an Schmerzen im Becken oder im unteren Rücken?",
+      type:"choice",
+      options:[
+        { label:"Ja", score:0, next:"q12_1" },
+        { label:"Nein", score:0, next:"q13" }
+      ]
+    },
+    {
+      id:"q12_1",
+      title:"12.1 Wie oft leiden Sie an diesen Schmerzen?",
+      type:"choice",
+      options:[
+        { label:"Nur 1–2 Mal pro Monat (+1)", score:1, next:"q13" },
+        { label:"1–2 Mal die Woche (+2)", score:2, next:"q13" },
+        { label:"3–5 Mal die Woche (+4)", score:4, next:"q13" },
+        { label:"Täglich (+5)", score:5, next:"q13" }
+      ]
+    },
 
-/* 4 */
-{ q:"Häufig Blasenentzündungen?",
-  a:[
-    {t:"Ja", next:"entz"},
-    {t:"Nein"}
-]},
+    {
+      id:"q13",
+      title:"13. OP im Beckenbereich / nahe Beckenboden gehabt?",
+      type:"choice",
+      options:[
+        { label:"Ja (+5)", score:5, next:"q14" },
+        { label:"Nein (+0)", score:0, next:"q14" }
+      ]
+    },
+    {
+      id:"q14",
+      title:"14. Organsenkung diagnostiziert?",
+      sub:"(z. B. Gebärmutter-, Blasen-, Beckenbodensenkung)",
+      type:"choice",
+      options:[
+        { label:"Ja (+5)", score:5, next:"q15" },
+        { label:"Nein (+0)", score:0, next:"q15" }
+      ]
+    },
+    {
+      id:"q15",
+      title:"15. Bereits Physio-Übungen oder Maßnahmen zur Beckenbodenstärkung gemacht?",
+      type:"choice",
+      options:[
+        { label:"Ja (+5)", score:5, next:"q16" },
+        { label:"Nein (+0)", score:0, next:"q16" }
+      ]
+    },
 
-{ id:"entz",
-  q:"Wie oft?",
-  a:[
-    {t:"1–2/Jahr (+1)", s:1},
-    {t:"alle 3–4 Monate (+2)", s:2},
-    {t:"alle 1–2 Monate (+3)", s:3},
-    {t:"chronisch (+5)", s:5}
-]},
+    {
+      id:"q16",
+      title:"16. Beeinträchtigung im Alltag/Lebensqualität (1–10)",
+      sub:"1 = kaum, 10 = sehr stark",
+      type:"scale",
+      next:"result"
+    },
 
-/* 5 */
-{ q:"Binden/Einlagen im Alltag?",
-  a:[
-    {t:"Ja (+4)", s:4},
-    {t:"Nein (+0)", s:0}
-]},
+    { id:"result", type:"result" }
+  ];
 
-/* 6 */
-{ q:"Restharngefühl?",
-  a:[
-    {t:"Ja (+3)", s:3},
-    {t:"Nein (+0)", s:0}
-]},
+  const map = Object.fromEntries(Q.map(x => [x.id, x]));
+  let currentId = "q1";
+  let score = 0;
 
-/* 7 */
-{ q:"Kinder geboren?",
-  a:[
-    {t:"Ja (+3)", s:3},
-    {t:"Nein (+0)", s:0}
-]},
+  function blockEmpfehlung(s){
+    if (s <= 25) return "10er Block";
+    if (s <= 50) return "20er Block";
+    if (s <= 75) return "30er Block";
+    return "40er Block";
+  }
 
-/* 8 */
-{ q:"Veränderungen der Libido?",
-  a:[
-    {t:"Ja (+4)", s:4},
-    {t:"Nein (+0)", s:0}
-]},
+  function render(){
+    const app = document.getElementById("app");
+    const q = map[currentId];
 
-/* 9 */
-{ q:"Schmerzen beim Sex?",
-  a:[
-    {t:"Ja (+4)", s:4},
-    {t:"Nein (+0)", s:0}
-]},
+    const header = `
+      <div class="top">
+        <div class="brand">
+          <b>BROWNS – Beckenboden Check (Frauen)</b>
+          <span>Keine Speicherung · Touch-optimiert</span>
+        </div>
+        <div class="pill">Score: <b>${clamp100(score)}</b> / 100</div>
+      </div>
+    `;
 
-/* 10 */
-{ q:"Probleme Orgasmus?",
-  a:[
-    {t:"Ja (+4)", s:4},
-    {t:"Nein (+0)", s:0}
-]},
+    if(q.type === "result"){
+      const finalScore = clamp100(score);
+      const block = blockEmpfehlung(finalScore);
 
-/* 11 */
-{ q:"Mit Sensibilität unzufrieden?",
-  a:[
-    {t:"Ja (+4)", s:4},
-    {t:"Nein (+0)", s:0}
-]},
+      app.innerHTML = `
+        ${header}
+        <h2>Ergebnis</h2>
+        <div class="score">${finalScore} <span style="font-size:18px;font-weight:800">/ 100</span></div>
+        <div class="box" style="margin-top:14px">
+          <div style="font-weight:900;color:var(--primary)">Empfehlung</div>
+          <div style="margin-top:6px;font-size:18px;font-weight:900">${block}</div>
+          <div style="margin-top:10px;color:var(--muted);font-size:13px">
+            Tipp: Für Studioabläufe kann der Score notiert werden (keine Speicherung in der App).
+          </div>
+        </div>
+        <div class="row" style="margin-top:14px">
+          <button class="ghost" onclick="restart()">Neuer Fragebogen</button>
+        </div>
+      `;
+      return;
+    }
 
-/* 12 */
-{ q:"Becken-/Rückenschmerzen?",
-  a:[
-    {t:"Ja", next:"pain"},
-    {t:"Nein"}
-]},
+    let body = `<h2>${q.title}</h2>`;
+    if(q.sub) body += `<p class="sub">${q.sub}</p>`;
 
-{ id:"pain",
-  q:"Wie oft Schmerzen?",
-  a:[
-    {t:"1–2/Monat (+1)", s:1},
-    {t:"1–2/Woche (+2)", s:2},
-    {t:"3–5/Woche (+4)", s:4},
-    {t:"Täglich (+5)", s:5}
-]},
+    if(q.type === "choice"){
+      body += `<div class="opts">`;
+      q.options.forEach(opt => {
+        body += `<button onclick="choose(${opt.score||0}, '${opt.next}')">${opt.label}</button>`;
+      });
+      body += `</div>`;
+    }
 
-/* 13 */
-{ q:"OP im Beckenbereich?",
-  a:[
-    {t:"Ja (+5)", s:5},
-    {t:"Nein (+0)", s:0}
-]},
+    if(q.type === "scale"){
+      body += `<div class="opts">`;
+      for(let i=1;i<=10;i++){
+        body += `<button onclick="choose(${i}, '${q.next}')">${i}</button>`;
+      }
+      body += `</div>`;
+    }
 
-/* 14 */
-{ q:"Organsenkung diagnostiziert?",
-  a:[
-    {t:"Ja (+5)", s:5},
-    {t:"Nein (+0)", s:0}
-]},
+    body += `
+      <div class="row">
+        <button class="ghost" onclick="restart()">Zurücksetzen</button>
+      </div>
+    `;
 
-/* 15 */
-{ q:"Bereits Übungen/Physio gemacht?",
-  a:[
-    {t:"Ja (+5)", s:5},
-    {t:"Nein (+0)", s:0}
-]},
+    app.innerHTML = header + body;
+  }
 
-/* 16 */
-{ q:"Beeinträchtigung 1–10",
-  scale:true
-}
-];
+  function choose(add, nextId){
+    score += (add || 0);
+    currentId = nextId || "result";
+    render();
+  }
 
-function render(){
+  function restart(){
+    score = 0;
+    currentId = "q1";
+    render();
+  }
 
-if(step>=steps.length){
-let block="10er Block";
-if(score>25)block="20er Block";
-if(score>50)block="30er Block";
-if(score>75)block="40er Block";
-
-app.innerHTML=`
-<h2>Ergebnis</h2>
-<div class="score">${score} / 100</div>
-<p><b>Empfehlung: ${block}</b></p>
-<button class="primary" onclick="restart()">Neuer Fragebogen</button>`;
-return;
-}
-
-let s = steps[step];
-
-let html=`<h2>${s.q}</h2>`;
-
-if(s.scale){
-for(let i=1;i<=10;i++)
-html+=`<button onclick="choose(${i})">${i}</button>`;
-}
-else{
-s.a.forEach(a=>{
-html+=`<button onclick='choose(${a.s||0}, "${a.next||""}")'>${a.t}</button>`;
-});
-}
-
-app.innerHTML=html;
-}
-
-function choose(val,next){
-score+=val;
-if(next){
-let idx=steps.findIndex(x=>x.id===next);
-step=idx;
-}else{
-step++;
-}
-render();
-}
-
-function restart(){
-score=0;step=0;render();
-}
-
-render();
+  render();
 </script>
 </body>
 </html>
+
